@@ -206,7 +206,7 @@ CONFIG_DEV_NULL=y
 # CONFIG_LCD is not set
 # CONFIG_MMCSD is not set
 CONFIG_MTD=y
-# CONFIG_MTD_PARTITION is not set
+CONFIG_MTD_PARTITION=y
 CONFIG_RAMMTD=y
 CONFIG_RAMMTD_BLOCKSIZE=512
 CONFIG_RAMMTD_ERASESIZE=4096
@@ -261,12 +261,7 @@ CONFIG_FS_FAT=y
 # CONFIG_FAT_LFN is not set
 # CONFIG_FS_FATTIME is not set
 # CONFIG_FAT_DMAMEMORY is not set
-CONFIG_FS_NXFFS=y
-CONFIG_NXFFS_PREALLOCATED=y
-CONFIG_NXFFS_ERASEDSTATE=0xff
-CONFIG_NXFFS_PACKTHRESHOLD=32
-CONFIG_NXFFS_MAXNAMLEN=255
-CONFIG_NXFFS_TAILTHRESHOLD=8192
+# CONFIG_FS_NXFFS is not set
 # CONFIG_FS_ROMFS is not set
 
 #
@@ -367,21 +362,15 @@ CONFIG_LIB_SENDFILE_BUFSIZE=512
 # CONFIG_EXAMPLES_MM is not set
 # CONFIG_EXAMPLES_MODBUS is not set
 # CONFIG_EXAMPLES_MOUNT is not set
-# CONFIG_EXAMPLES_MTDPART is not set
+CONFIG_EXAMPLES_MTDPART=y
+# CONFIG_EXAMPLES_MTDPART_ARCHINIT is not set
+CONFIG_EXAMPLES_MTDPART_NEBLOCKS=32
+CONFIG_EXAMPLES_MTDPART_NPARTITIONS=3
 # CONFIG_EXAMPLES_NSH is not set
 # CONFIG_EXAMPLES_NULL is not set
 # CONFIG_EXAMPLES_NX is not set
 # CONFIG_EXAMPLES_NXCONSOLE is not set
-CONFIG_EXAMPLES_NXFFS=y
-# CONFIG_EXAMPLES_NXFFS_ARCHINIT is not set
-CONFIG_EXAMPLES_NXFFS_NEBLOCKS=32
-CONFIG_EXAMPLES_NXFFS_MAXNAME=128
-CONFIG_EXAMPLES_NXFFS_MAXFILE=8192
-CONFIG_EXAMPLES_NXFFS_MAXIO=347
-CONFIG_EXAMPLES_NXFFS_MAXOPEN=512
-CONFIG_EXAMPLES_NXFFS_MOUNTPT="/mnt/nxffs"
-CONFIG_EXAMPLES_NXFFS_NLOOPS=100
-# CONFIG_EXAMPLES_NXFFS_VERBOSE is not set
+# CONFIG_EXAMPLES_NXFFS is not set
 # CONFIG_EXAMPLES_NXFLAT is not set
 # CONFIG_EXAMPLES_NXHELLO is not set
 # CONFIG_EXAMPLES_NXIMAGE is not set
